--- a/src/kalman/CMakeLists.txt
+++ b/src/kalman/CMakeLists.txt
@@ -1,13 +1,13 @@
-include_directories(
-    ${GNC_SRC_DIR}
-    ${EIGEN3_INCLUDE_DIR}
-    ${SOPHUS_INCLUDE_DIR}
-)
-
 add_library(maav-kalman SHARED
     kalman_state.cpp
 )
 
-target_link_libraries(
+target_include_directories(maav-kalman PUBLIC
+    ${GNC_INCLUDE_DIR}
+    ${EIGEN3_INCLUDE_DIR}
+    ${SOPHUS_INCLUDE_DIR}
+)
+
+target_link_libraries(maav-kalman
     maav-state
 )
