--- a/src/kalman/CMakeLists.txt
+++ b/src/kalman/CMakeLists.txt
@@ -1,14 +1,14 @@
 add_library(maav-kalman SHARED
-    kalman_state.cpp
-    history.cpp
-)
+        kalman_state.cpp
+        history.cpp
+        unscented_transform.cpp)
 
 target_include_directories(maav-kalman PUBLIC
-    ${GNC_INCLUDE_DIR}
-    ${EIGEN3_INCLUDE_DIR}
-    ${SOPHUS_INCLUDE_DIR}
-)
+        ${GNC_INCLUDE_DIR}
+        ${EIGEN3_INCLUDE_DIR}
+        ${SOPHUS_INCLUDE_DIR}
+        )
 
 target_link_libraries(maav-kalman
-    maav-state
-)
+        maav-state
+        )
