Fix GNC CMakeLists
Updated .clang-format to use MAAV style

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,32 @@
-build/
-lib/
-bin/
+build
+lib
+bin
 testBin/
 datasets/
-CMakeFiles
-CMakeCache.txt
 Testing/
 Vocabulary/
 cmake-build-debug/
+*.swp
+*.vim
+*~
+\#*\#
+*.pdf
+*.eps
+*.exe
+tags
+build
+build-*
+april/bin/*
+*.o
+*.a
+*.so
+*.DS_Store
+CMakeFiles
+CMakeCache.txt
+Out*
+DataCoordImages
+*sim_output.txt
+compile_commands.json
+*.csv
+*.vscode
+*.idea
