--- a/src/gnc/state/CMakeLists.txt
+++ b/src/gnc/state/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(maav-state SHARED
 )
 
 target_include_directories(maav-state PUBLIC
-    ${GNC_INCLUDE_DIR}
+    ${SW_INCLUDE_DIR}
     ${EIGEN3_INCLUDE_DIR}
     ${SOPHUS_INCLUDE_DIR}
 )
