--- a/tests/gnc/CMakeLists.txt
+++ b/tests/gnc/CMakeLists.txt
@@ -6,9 +6,8 @@ ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)
 find_package(Boost REQUIRED COMPONENTS unit_test_framework)
 
 include_directories(
-        ${GNC_INCLUDE_DIR}
+        ${SW_INCLUDE_DIR}
         ${GNC_SRC_DIR}
-        ${GNC_INCLUDE_DIR}
         ${Boost_INCLUDE_DIRS}
         ${EIGEN3_INCLUDE_DIR}
 )
