--- a/src/gnc/state/CMakeLists.txt
+++ b/src/gnc/state/CMakeLists.txt
@@ -1,9 +1,9 @@
-add_library(maav-state SHARED
-    base_state.cpp
-)
-
-target_include_directories(maav-state PUBLIC
+include_directories(maav-state
     ${SW_INCLUDE_DIR}
     ${EIGEN3_INCLUDE_DIR}
     ${SOPHUS_INCLUDE_DIR}
+)
+
+add_library(maav-state SHARED
+    base_state.cpp
 )
