Updated examples and tests CMakeLists

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,1 +1,7 @@
-include_directories(gnc)
+if(NOT BUILD_EXAMPLES)
+    return()
+endif()
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin/examples)
+
+add_subdirectory(gnc)
