--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,12 @@ set(CMAKE_CXX_EXTENSIONS ON)
 
 # Add option to build modules
 option(BUILD_GNC "Build the GNC module" ON)
-option(BUILD_VISION "Build the vision module" ON)
+option(BUILD_VISION "Build the vision module" OFF)
 option(BUILD_MISSION_PLANNING "Build the mission planning module" ON)
 option(BUILD_GCS "Build the ground control station" OFF)
 option(BUILD_GCS_CLIENT "Build the ground control station client" ON)
 option(BUILD_TANFAN "Build the Tiva Atom Network Forwarding Application (TANFAN)" ON)
+option(BUILD_EXAMPLES "Build example executables" OFF)
 option(BUILD_TESTS "Build test cases" OFF)
 
 # Set all compiled libraries to be placed in software/lib
