Fixed opencv issues in CMake

--- a/src/common/math/CMakeLists.txt
+++ b/src/common/math/CMakeLists.txt
@@ -1,4 +1,7 @@
+find_package(OpenCV REQUIRED)
+
 include_directories(
+	${OpenCV_INCLUDE_DIR}
     ${EIGEN3_INCLUDE_DIR}
     ${YAML_INCLUDE_DIRS}
 )
@@ -13,4 +16,5 @@ add_library(maav-math SHARED
 
 target_link_libraries(maav-math
     ${YAML_LIBRARY}
+	${OpenCV_LIBS}
 )
