--- a/src/vision/driver/CMakeLists.txt
+++ b/src/vision/driver/CMakeLists.txt
@@ -1,5 +1,6 @@
 find_package(PCL 1.7 REQUIRED)
 find_package(LibRealSense REQUIRED)
+find_package(LibRealSense2 REQUIRED)
 find_package(ZLIB REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(ZCM REQUIRED)
@@ -14,6 +15,7 @@ include_directories(
     ${EIGEN3_INCLUDE_DIR}
     ${PCL_INCLUDE_DIRS}
     ${LIBREALSENSE_INCLUDE_DIRS}
+    ${LIBREALSENSE2_INCLUDE_DIRS}
 )
 
 add_library(VehicleStateRepo SHARED VehicleStateRepo.cpp)
@@ -37,6 +39,7 @@ target_link_libraries(maav-vision
     ${YAMLCPP_LIBRARY}
     ${PCL_LIBRARIES}
     ${LIBREALSENSE_LIBRARIES}
+    ${LIBREALSENSE2_LIBRARIES}
     nav-line-detector
     nav-roomba-detector
     atomcore-msg
