Fixed all remaining issues in setup and verified success by running on fresh ubuntu 16.04 install.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,8 @@ option(BUILD_MISSION_PLANNING "Build the mission planning module" ON)
 option(BUILD_GCS "Build the ground control station" OFF)
 option(BUILD_GCS_CLIENT "Build the ground control station client" ON)
 option(BUILD_TANFAN "Build the Tiva Atom Network Forwarding Application (TANFAN)" ON)
-option(BUILD_EXAMPLES "Build example executables" OFF)
-option(BUILD_TESTS "Build test cases" OFF)
+option(BUILD_EXAMPLES "Build example executables" ON)
+option(BUILD_TESTS "Build test cases" ON)
 
 # Set all compiled libraries to be placed in software/lib
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
