Enabled compilation of depth utils in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_EXTENSIONS ON)
 
 # Add option to build modules
 option(BUILD_GNC "Build the GNC module" ON)
-option(BUILD_VISION "Build the vision module" OFF)
+option(BUILD_VISION "Build the vision module" ON)
 option(BUILD_MISSION_PLANNING "Build the mission planning module" ON)
 option(BUILD_GCS "Build the ground control station" OFF)
 option(BUILD_GCS_CLIENT "Build the ground control station client" ON)
