--- a/src/gnc/control/CMakeLists.txt
+++ b/src/gnc/control/CMakeLists.txt
@@ -1,14 +1,10 @@
-# add_library(maav-kalman SHARED
-#     kalman_state.cpp
-# )
+ add_library(maav-control SHARED
+     pid.cpp
+ )
 
-# target_include_directories(maav-control PUBLIC
-#     ${GNC_SRC_DIR}
-#     ${GNC_SRC_DIR}/kalman
-#     ${EIGEN3_INCLUDE_DIR}
-#     ${SOPHUS_INCLUDE_DIR}
-# )
+ target_include_directories(maav-control PUBLIC ${SW_INCLUDE_DIR}
+ )
 
-# target_link_libraries(maav-control
-#     maav-state
-# )
+ target_link_libraries(maav-control
+     maav-state
+ )
