--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -8,3 +8,10 @@ target_link_libraries(maav-planner maav-gnc
         ${ZCM_LIBRARIES}
         maav-utils
         maav-msg)
+
+add_executable(maav-controller maav-controller.cpp)
+
+target_link_libraries(maav-controller maav-gnc
+        ${ZCM_LIBRARIES}
+        maav-utils
+        maav-msg)
