--- a/src/common/mavlink/CMakeLists.txt
+++ b/src/common/mavlink/CMakeLists.txt
@@ -1,3 +1,8 @@
+include_directories(maav-mavlink
+    ${SW_INCLUDE_DIR}
+    ${EIGEN3_INCLUDE_DIR}
+)
+
 add_library(maav-mavlink SHARED
     communication_port.cpp
     offboard_control.cpp
