Load gains from yaml config file

--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,18 +1,23 @@
 include_directories(
         ${ZCM_INCLUDE_DIRS}
-        ${SW_INCLUDE_DIR})
+        ${SW_INCLUDE_DIR}
+        ${YAMLCPP_INCLUDE_DIRS}
+)
 
 add_executable(maav-planner maav-guidance.cpp)
 
-target_link_libraries(maav-planner maav-gnc
+target_link_libraries(maav-planner 
+        maav-gnc
         ${ZCM_LIBRARIES}
         maav-utils
         maav-msg)
 
 add_executable(maav-controller maav-controller.cpp)
 
-target_link_libraries(maav-controller maav-gnc
+target_link_libraries(maav-controller 
+        maav-gnc
         ${ZCM_LIBRARIES}
+        ${YAMLCPP_LIBRARY}
         maav-utils
         maav-msg
         maav-mavlink
