--- a/src/gnc/kalman/CMakeLists.txt
+++ b/src/gnc/kalman/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(maav-kalman SHARED
     kalman_state.cpp
     history.cpp
     unscented_transform.cpp
+    updates/lidar_update.cpp
 )
 
 target_include_directories(maav-kalman PUBLIC
