--- a/tests/gnc/CMakeLists.txt
+++ b/tests/gnc/CMakeLists.txt
@@ -25,7 +25,8 @@ set(TEST_SRCS
         state_test.cpp
         history_test.cpp
         unscented_transform_test.cpp
-        pid_test.cpp)
+        pid_test.cpp
+        lidar_test.cpp)
 
 foreach (testSrc ${TEST_SRCS})
     #Extract the filename without an extension (NAME_WE)
