--- a/config/modules/ctrl-config.yaml
+++ b/config/modules/ctrl-config.yaml
@@ -1,29 +1,29 @@
 # all PID gains are in the format [kp, ki, kd]
 pid-gains:
   pos-ctrl:
-    x: [1.00, 0.00, 0.00]
-    y: [1.00, 0.00, 0.00]
-    z: [0.40, 0.00, 0.20]
-    yaw: [1.00, 0.00, 0.00]
+    x: [1, 0, 0]
+    y: [1, 0, 0]
+    z: [3, 0, 0]
+    yaw: [1, 0, 0]
   rate-ctrl:
-    x: [1.00, 0.00, 0.00]
-    y: [1.00, 0.00, 0.00]
-    z: [1.00, 0.00, 0.00]
+    x: [1, 0, 0]
+    y: [1, 0, 0]
+    z: [1, 0.001, -0.05]
 
 # rate saturation limits for each position controller are in the format of [upper, lower]
 limits:
   rate: # limits are m/s for x, y, z and rad/s for yaw
-    x: [5.0, -5.0]
-    y: [5.0, -5.0]
-    z: [5.0, -5.0]
-    yaw: [5.0, -5.0]
+    x: [3, -3]
+    y: [3, -3]
+    z: [3, -3]
   accel: # limits are m/s^2
-    x: [5.0, -5.0]
-    y: [5.0, -5.0]
-    z: [5.0, -5.0]
+    x: [5, -5]
+    y: [5, -5]
+    z: [5, -5]
   angle: # limits are in degrees
-    pitch: [10.0, -10.0]
-    roll: [10.0, -10.0]
+    pitch: [10, -10]
+    roll: [10, -10]
+    yaw: [5, -5]
 
 # vehicle params that won't be tuned
 mass: 3.0 # kg
@@ -31,3 +31,4 @@ tol: 0.01 # convergence tolerance (norm of [x, y, z, yaw])
 min-fnorm: 0.001 # minimum allowed body-force norm (L2) on the vehicle: || [Fx, Fy, Fz] ||
 
 uart-path: "/dev/ttyACM1"
+min-thrust: 0
