--- a/config/modules/ctrl-config.yaml
+++ b/config/modules/ctrl-config.yaml
@@ -4,7 +4,7 @@ pid-gains:
     x: [1, 0, 0]
     y: [1, 0, 0]
     z: [3, 0, 0]
-    yaw: [1, 0, 0]
+    pitch: [0.2, 0, 0.05]
   rate-ctrl:
     x: [1, 0, 0]
     y: [1, 0, 0]
