--- a/tests/gnc/CMakeLists.txt
+++ b/tests/gnc/CMakeLists.txt
@@ -26,7 +26,8 @@ set(TEST_SRCS
         history_test.cpp
         unscented_transform_test.cpp
         pid_test.cpp
-        lidar_test.cpp)
+        lidar_test.cpp
+        prediction_test.cpp)
 
 foreach (testSrc ${TEST_SRCS})
     #Extract the filename without an extension (NAME_WE)
