--- a/config/gnc/ctrl-config.yaml
+++ b/config/gnc/ctrl-config.yaml
@@ -4,9 +4,9 @@ pid-gains:
     x: [1, 0, 0]
     y: [1, 0, 0]
     z: [3, 0, 0]
-    pitch: [0.2, 0, 0.05]
+    yaw: [1, 0, 0]
   rate-ctrl:
-    x: [1, 0, 0]
+    x: [0.2, 0, 0.05]
     y: [1, 0, 0]
     z: [1, 0.001, -0.05]
 
@@ -15,20 +15,19 @@ limits:
   rate: # limits are m/s for x, y, z and rad/s for yaw
     x: [3, -3]
     y: [3, -3]
-    z: [3, -3]
+    z: [0.5, -0.5]
+    yaw: [0.1, -0.1]
   accel: # limits are m/s^2
     x: [5, -5]
     y: [5, -5]
     z: [5, -5]
   angle: # limits are in degrees
-    pitch: [10, -10]
+    pitch: [5, -5]
     roll: [10, -10]
-    yaw: [5, -5]
 
 # vehicle params that won't be tuned
 mass: 3.0 # kg
 tol: 0.01 # convergence tolerance (norm of [x, y, z, yaw])
 min-fnorm: 0.001 # minimum allowed body-force norm (L2) on the vehicle: || [Fx, Fy, Fz] ||
-
 uart-path: "/dev/ttyACM1"
 min-thrust: 0
