--- a/config/gnc/ctrl-config.yaml
+++ b/config/gnc/ctrl-config.yaml
@@ -4,10 +4,10 @@ pid-gains:
     x: [1, 0, 0]
     y: [1, 0, 0]
     z: [3, 0, 0]
-    yaw: [1, 0, 0]
+    yaw: [0.5, 0, 0.001]
   rate-ctrl:
-    x: [0.2, 0, 0.05]
-    y: [1, 0, 0]
+    x: [0.4, 0.00002, 0.2]
+    y: [0.4, 0.00002, 0.2]
     z: [1, 0.001, -0.05]
 
 # rate saturation limits for each position controller are in the format of [upper, lower]
@@ -16,14 +16,14 @@ limits:
     x: [3, -3]
     y: [3, -3]
     z: [0.5, -0.5]
-    yaw: [0.1, -0.1]
+    yaw: [1, -1]
   accel: # limits are m/s^2
     x: [5, -5]
     y: [5, -5]
     z: [5, -5]
   angle: # limits are in degrees
-    pitch: [5, -5]
     roll: [10, -10]
+    pitch: [10, -10]
 
 # vehicle params that won't be tuned
 mass: 3.0 # kg
@@ -31,3 +31,4 @@ tol: 0.01 # convergence tolerance (norm of [x, y, z, yaw])
 min-fnorm: 0.001 # minimum allowed body-force norm (L2) on the vehicle: || [Fx, Fy, Fz] ||
 uart-path: "/dev/ttyACM1"
 min-thrust: 0
+sim-state: true #true- state comes from sim, false- state comes from kalman filter
