--- a/config/gnc/kalman_config.yaml
+++ b/config/gnc/kalman_config.yaml
@@ -2,22 +2,17 @@
 # All covariance matrices are diagonal
 
 history:
-  # Max size of the playback history
   size: 300
-  # Tolerance in of combining a measurement
   tolerance: 1000 # [us]
 
 state:
   # Starting state
-  attitude:
-    - [1, 0, 0, 0]
-  position:
-    - [0, 0, 0] # [m]
-  velocity:
-    - [0, 0, 0] # [m/s]
+  attitude: [1, 0, 0, 0]
+  position: [0, 0, 0] # [m]
+  velocity: [0, 0, 0] # [m/s]
 
   # Starting covariance
-  P: [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]
+  covariance: [0.01, 0.01, 0.01, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
 
 
 prediction:
@@ -28,7 +23,7 @@ prediction:
     kappa: 0.0
 
   # Process noise covariance
-  Q_i: [0.1, 0.1, 0.1, 1.0, 1.0, 1.0]
+  Q_i: [0.05, 0.05, 0.05, 1.0, 1.0, 1.0]
 
 
 
