--- a/config/gnc/estimator-config.yaml
+++ b/config/gnc/estimator-config.yaml
@@ -2,7 +2,7 @@
 # All covariance matrices are diagonal
 
 history:
-  size: 300
+  size: 300 # Maximum history size
   tolerance: 1000 # [us]
 
 state:
@@ -12,7 +12,7 @@ state:
   velocity: [0, 0, 0] # [m/s]
 
   # Starting covariance
-  covariance: [0.01, 0.01, 0.01, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1]
+  covariance: [0.000001, 0.000001, 0.000001, 0.0001, 0.0001, 0.0001, 0.0001, 0.0001, 0.0001]
 
 
 prediction:
@@ -20,12 +20,10 @@ prediction:
   UT:
     alpha: 0.1
     beta: 2.0
-    kappa: 0.0
+    kappa: 2
 
   # Process noise covariance
-  Q_i: [0.05, 0.05, 0.05, 1.0, 1.0, 1.0]
-
-
+  Q_i: [0.000001, 0.000001, 0.000001, 0.0001, 0.00001, 0.00001]
 
 updates:
 
@@ -37,7 +35,4 @@ updates:
       kappa: 0.0
 
     # Sensor noise covariance
-    R: [0.01]
-
-
-# Unscented transform params\nUT:\n  alpha: 0.1\n  beta: 2.0\n  kappa: 0.0\n# Process noise covariance\nQ_i:\n- [0.1, 0.1, 0.1, 1.0, 1.0, 1.0]\n
+    R: [0.000001]
