--- a/src/gnc/CMakeLists.txt
+++ b/src/gnc/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory(control)
 add_subdirectory(kalman)
 add_subdirectory(slam)
 add_subdirectory(utils)
+add_subdirectory(xbox-controller)
 
 # build libmaav-gnc
 add_library(maav-gnc SHARED
